# mvne_wet1

./: .gitignore  CMakeLists.txt  CompleteTeam.cpp  CompleteTeam.h  LinkedList.h  List.h  Player.cpp  Player.h  PlayerId.cpp  PlayerId.h  PlayerRank.cpp  PlayerRank.h  Team.cpp  Team.h  Tree.cpp  Tree.h  main.cpp  main23a1.cpp  makefile  test  test.in  worldcup23a1.cpp  worldcup23a1.h
